src/style/core.css
/* ... */
.z-window .z-window-footer {
    background: #E1E1E1; /*non-CSS3 browsers*/
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#E1E1E1', endColorstr='#d0d0d0'); /* for IE */
    background: -webkit-gradient(linear,left top, left bottom,from(#E1E1E1),to(#d0d0d0)); /*webkit*/
    background: -moz-linear-gradient(center top, #E1E1E1, #d0d0d0) repeat scroll 0 0 transparent; /*gecko*/
    background: linear-gradient(#E1E1E1, #d0d0d0); /*CSS3*/
    border-top: 1px solid #BEBEBE;
    -webkit-border-bottom-right-radius: 3px;
    -webkit-border-bottom-left-radius: 3px;
    -moz-border-radius-bottomright: 3px;
    -moz-border-radius-bottomleft: 3px;
    border-bottom-right-radius: 3px;
    border-bottom-left-radius: 3px;
    text-align: center;
    min-height: 12px;
    padding: 5px;
}

.z-window .z-window-title {
    font-size: 12px;
}

.z-window.z-draggable .z-window-title {
    cursor: move;
}

.z-window .z-window-control {
    display: block;
    position: absolute;
    top: 5px;
    height: 16px;
    width: 16px;
    background-position: 0 0;
    cursor: pointer;
}

.z-window .z-window-control:hover {
    background-position: 80px 0;
}

.z-window .z-window-close {
    right: 10px;
    background-image: url("../images/ui/window.close.png");
}

.z-window .z-window-maximize {
    right: 30px;
    background-image: url("../images/ui/window.max.png");
}

.z-window .z-window-minimize {
    right: 50px;
    background-image: url("../images/ui/window.min.png");
}

.z-window.z-minimized .z-window-minimize,
.z-window.z-maximized .z-window-maximize {
    background-image: url("../images/ui/window.restore.png");
}

.z-window .resizable_handle {
    display: block;
    position: absolute;
    bottom: 4px;
    right: 5px;
    height: 13px;
    width: 13px;
    background-image: url("../images/ui/window.resize.png");
    background-repeat: no-repeat;
    background-position: 100% 100%;
    cursor: pointer;
    cursor: nw-resize;
}

.z-window .iframe-overlay,
.z-window .resizable_handle.onresize {
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    width: auto;
    height: auto;
    position: absolute;
    z-index: 1000;
}

.z-window.z-minimized {
    height: auto !important;
    min-height:0 !important;
    position: fixed !important;
    bottom: 0 !important;
    top: auto !important;
}

.z-window.z-maximized {
    position: fixed !important;
    max-height: none !important;
    max-width: none !important;
    top: 0 !important;
    bottom: 0 !important;
    left: 0 !important;
    right: 0 !important;
    width: auto !important;
    height: auto !important;
}

.z-window.z-minimized .z-window-header {
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    position: static;
}

.z-window.z-minimized .z-window-body,
.z-window.z-minimized .z-window-footer,
.z-window.z-minimized .resizable_handle,
.z-window.z-maximized .resizable_handle {
    display: none;
}

.z-window .z-window-header,
.z-window .z-window-footer {
    position: absolute;
    left: 0;
    right: 0;
}

.z-window .z-window-header {
    top: 0;
}

.z-window .z-window-footer {
    bottom: 0;
}

.z-window .z-window-body {
    top: 26px;
    bottom: 26px;
    left: 0;
    right: 0;
}

.z-window.z-dialog .z-window-body {
    bottom: 35px;
}

.z-window-indicator {
    background: #fff url(../images/ajax/large_square_white.gif) no-repeat 50% 50%;
    opacity: 0.8;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.z-alert .z-window-header {
    color: #F2503E;
}

.z-confirm .z-window-header {
    color: #EDE54E;
}

#control_overlay {
    background-color: #000;
}

/******************************************************************************
* Zikula.UI - SelectMultiple
*******************************************************************************/

.z-select-multiple.z-form {
    padding: 0;
    margin: 0;
}

.z-select-multiple.z-form .z-formrow {
    margin: 2px 0;
    padding: 0;
}

.z-select-multiple.z-form .z-formrow.selected {
    background: #DCDCDC;
}

.z-select-multiple.z-form div.z-formrow label {
    width: 49%;
}

/******************************************************************************
* Zikula.UI - Tabs
*******************************************************************************/

.z-tabs {
    background: url("../images/ui/tab_bottom.png") repeat-x scroll center bottom transparent;
    margin:0 !important;
    padding:0 !important;
    width: 100%;
    overflow: hidden;
}

.z-tabs li {
    background-color: #F3F3F3;
    border: 1px solid #ccc;
    float: left;
    list-style-type: none;
    margin: 0 5px 0 0;
    padding: 0;
    z-index: 1000;
}

.z-tabs li > a {
    border-right: 1px solid transparent;
    color: #666666;
    float: left;
    font-weight: bold;
    outline: 0; /* remove Firefox border */
    padding: 5px;
    position: relative;
    text-decoration: none;
}

.z-tabs li > a:hover {
    background: #fff !important;
    color: #000;
    text-decoration: none;
}

.z-tabs li.active {
    background: none repeat scroll 0 0 #fff;
    border-bottom: 1px solid #fff;
    z-index: 2000;
}

.z-tabs li.active a:hover {
    border-right: 1px solid transparent;
}

.z-tabs-content {
    background: none repeat scroll 0 0 #fff;
    border: 1px solid #ccc;
    border-top: none;
    padding: 5px;
}
/* ... */

